--- a/index.html
+++ b/index.html
@@ -15,25 +15,32 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
   crossorigin=""/>
+  <!-- LOAD GMaps JS API  -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCelXjId2nmXXxMtfEwYGkqM7f3aI899RQ" async defer></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+
 
 </head>
 
 <body>
+
   <div id="legend">
+    <h1> This is how 24 hours of citibike trips look like </h1>
     <p class='legendItem A'> More trips arriving to the station </p>
     <p class='legendItem B'> More trips leaving the station  </p>
     <p class='legendItem C'> Same amount of trips arriving and leaving </p>
+    <p style='font-size: 70%'> Press Alt+Shift to draw a zoom box in an area of interest</p>
   </div>
 
-  <div id="graph">
+  <div id="container">
 
   </div>
 
   <div id='my-map'>  </div>
 
 <!-- LOAD Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
 <!-- LOAD leaflet script -->
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
 integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
@@ -42,6 +49,9 @@ crossorigin=""></script>
 <script src='//code.jquery.com/jquery-3.3.1.min.js'
 integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8='
 crossorigin='anonymous'></script>
+<!-- LOAD GoogleMutant -->
+<script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
+
 <!-- LOAD DATA  -->
 <script src="data/00.js"></script>
 <script src="data/01.js"></script>
