--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!doctype html>
 
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="utf-8">
+  <meta charset='utf-8'>
 
   <title>CITIBIKE </title>
-  <meta name="description" content="CITIBIKE">
-  <meta name="author" content="RIGEL JARABO">
+  <meta name='description' content='CITIBIKE'>
+  <meta name='author' content='RIGEL JARABO'>
 
   <!-- LOAD STYLE CSS -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel='stylesheet' href='css/styles.css'>
 
   <!-- LOAD STYLE LEAFLET MAP (USING LEAFLET FROM A CDN http://leafletjs.com/download.html ) -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-  integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-  crossorigin=""/>
+  <link rel='stylesheet' href='https://unpkg.com/leaflet@1.3.1/dist/leaflet.css'
+  integrity='sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=='
+  crossorigin=''/>
   <!-- LOAD GMaps JS API  -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCelXjId2nmXXxMtfEwYGkqM7f3aI899RQ" async defer></script>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCelXjId2nmXXxMtfEwYGkqM7f3aI899RQ' async defer></script>
+  <link rel='stylesheet' href='https://unpkg.com/leaflet@1.0.3/dist/leaflet.css' />
 
 
 </head>
 
 <body>
 
-  <div id="legend">
+  <div id='legend'>
     <h1> This is how 24 hours of citibike trips look like </h1>
     <p class='legendItem A'> More trips arriving to the station </p>
     <p class='legendItem B'> More trips leaving the station  </p>
     <p class='legendItem C'> Same amount of trips arriving and leaving </p>
     <p style='font-size: 70%'> Press Alt+Shift to draw a zoom box in an area of interest</p>
+    <button class='StartButton' > Next hour </button>
+    <p> Time: </p> <div  class='HourCount'> 12:00 am </div>
   </div>
 
-  <div id="container">
+  <div id='container'>
 
   </div>
 
   <div id='my-map'>  </div>
 
 <!-- LOAD Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Supermercado+One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Jura' rel='stylesheet'>
 <!-- LOAD leaflet script -->
-<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-crossorigin=""></script>
+<script src='https://unpkg.com/leaflet@1.3.1/dist/leaflet.js'
+integrity='sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=='
+crossorigin=''></script>
 <!-- LOAD JQUERY -->
 <script src='//code.jquery.com/jquery-3.3.1.min.js'
 integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8='
@@ -53,33 +55,34 @@ crossorigin='anonymous'></script>
 <script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
 
 <!-- LOAD DATA  -->
-<script src="data/00.js"></script>
-<script src="data/01.js"></script>
-<script src="data/02.js"></script>
-<script src="data/03.js"></script>
-<script src="data/04.js"></script>
-<script src="data/05.js"></script>
-<script src="data/06.js"></script>
-<script src="data/07.js"></script>
-<script src="data/08.js"></script>
-<script src="data/09.js"></script>
-<script src="data/10.js"></script>
-<script src="data/11.js"></script>
-<script src="data/12.js"></script>
-<script src="data/13.js"></script>
-<script src="data/14.js"></script>
-<script src="data/15.js"></script>
-<script src="data/16.js"></script>
-<script src="data/17.js"></script>
-<script src="data/18.js"></script>
-<script src="data/19.js"></script>
-<script src="data/20.js"></script>
-<script src="data/21.js"></script>
-<script src="data/22.js"></script>
-<script src="data/23.js"></script>
+<script src='data/00.js'></script>
+<script src='data/01.js'></script>
+<script src='data/02.js'></script>
+<script src='data/03.js'></script>
+<script src='data/04.js'></script>
+<script src='data/05.js'></script>
+<script src='data/06.js'></script>
+<script src='data/07.js'></script>
+<script src='data/08.js'></script>
+<script src='data/09.js'></script>
+<script src='data/10.js'></script>
+<script src='data/11.js'></script>
+<script src='data/12.js'></script>
+<script src='data/13.js'></script>
+<script src='data/14.js'></script>
+<script src='data/15.js'></script>
+<script src='data/16.js'></script>
+<script src='data/17.js'></script>
+<script src='data/18.js'></script>
+<script src='data/19.js'></script>
+<script src='data/20.js'></script>
+<script src='data/21.js'></script>
+<script src='data/22.js'></script>
+<script src='data/23.js'></script>
 
 <!-- LOAD JS script -->
-<script src="js/scripts.js"></script>
+<script src='js/scripts.js'></script>
+<script src='js/player.js'></script>
 
 </body>
 </html>
