--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang='en'>
 <head>
   <meta charset='utf-8'>
-
+  <link rel='icon' type='image/png' href='data/icon.png'>
   <title> 24 hours of Citibike </title>
   <meta name='description' content='CITIBIKE'>
   <meta name='author' content='RIGEL JARABO'>
 
   <!-- LOAD bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css' integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ' crossorigin='anonymous'>
   <!-- LOAD STYLE CSS -->
   <link rel='stylesheet' href='css/styles.css'>
   <!-- LOAD STYLE LEAFLET MAP (USING LEAFLET FROM A CDN http://leafletjs.com/download.html ) -->
@@ -19,72 +19,178 @@
   <!-- LOAD GMaps JS API  -->
   <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCelXjId2nmXXxMtfEwYGkqM7f3aI899RQ' async defer></script>
   <!-- LOAD Font Awesome -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
+  <script defer src='https://use.fontawesome.com/releases/v5.0.8/js/all.js'></script>
 </head>
 
 <body>
 
   <!-- Modal Start -->
-        <div class="modal fade" id="StartModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-          <div class="modal-dialog" role="document" >
-            <div class="modal-content">
-              <div class="modal-header" style="background-color: #0000CD">
-                <h5 class="modal-title" id="exampleModalLongTitle" style="color:#FFF">24 hours of citibike trips</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#FFF">
-                  <span aria-hidden="true">&times;</span>
-                </button>
+  <div class='modal fade' id='StartModalLong' tabindex='-1' role='dialog' aria-labelledby='exampleModalLongTitle' aria-hidden='true'>
+    <div class='modal-dialog' role='document' >
+      <div class='modal-content'>
+        <div class='modal-header' style='background-color: #0000CD'>
+          <h1 class='modal-title' id='exampleModalLongTitle' style='color:#FFF'><i class="fas fa-info-circle" style= 'color:#FFF'></i> About this map</h5>
+          <button type='button' class='close' data-dismiss='modal' aria-label='Close' style='color:#FFF'>
+            <span aria-hidden='true'>&times;</span>
+          </button>
+        </div>
+        <div class='modal-body' >
+          <p class='h6' style='color:black'>
+            <h2>This map shows the 738 citibike stations and where each of the 73,728 trips started or ended by each hour of January 22, 2018.</br></br></h2>
+            <h2>About the icons: </br></br></h2>
+              <p style= 'font-size:15px'>
+                <i class='fas fa-play'  style= 'color:#0000CD'></i> To see the trips taken each hour displayed sequentially. </br>
+                <i class='fas fa-pause' style= 'color:#0000CD'></i> To pause the animation anytime. </br>
+                <i class="fas fa-stop"  style= 'color:#0000CD'></i> To stop and restart the animation. </br>
+                <i class="fas fa-chart-pie" style= 'color:#0000CD'></i> To  see some graphics about citibike trips. </br>
+                <i class="fas fa-clone" style= 'color:#0000CD'></i> To show or hide the layer control. </br>
+                <i class="fas fa-info-circle" style= 'color:#0000CD'></i> To see this message again. </br></br>
+                Finally, by clicking any station, you can find out more information about the trips taken at any given hour. </br></br>
+              </p>
+            <h2>About the colors: </br></br></h2>
+              <p style= 'font-size:15px'> At first all the points will be displaying location of citibike stations in <a style= 'background-color:rgba(0, 0, 205, .6)'> blue</a>.</br></br>
+                When selecting layers, or playing the animation, the stations will change color and size to display different properties: </br></br>
+                If a station had more incoming trips during the hour, the station will be <a style= 'background-color:#32CD32'> green</a>.</br>
+                If a station had more outgoing trips during the hour, the station will be <a style= 'background-color:#DC143C'> red</a>.</br>
+                The size of the points depends on how many trips where taken from each station any given hour.</br></br>
+                <a style='font-size: 85%'> (All of this is also explained in the legend)</a>
+              </p>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal About -->
+  <div class='modal fade' id='GraphicsModalLong' tabindex='-1' role='dialog' aria-labelledby='exampleModalLongTitle' aria-hidden='true'>
+    <div class='modal-dialog' role='document' >
+      <div class='modal-content'>
+        <div class='modal-header' style='background-color: #0000CD'>
+          <h1 class='modal-title' id='exampleModalLongTitle' style='color:#FFF'><i class="fas fa-chart-pie" style= 'color:#FFF'></i> Cool Graphics</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color:#FFF">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" >
+          <p class="h6" style="color:black">
+
+            <ul class="nav nav-tabs">
+              <li class="nav-item">
+                <h2 class="nav-link" href="#total" data-toggle="tab">Total trips during the day</h2>
+              </li>
+              <li class="nav-item">
+                <h2 class="nav-link active" href="#vstotal" data-toggle="tab">Starting v/s Ending by hour</h2>
+              </li>
+            </ul>
+
+            <div class="tab-content">
+              <div class="tab-pane " id="total" role="tabpanel">
+                <canvas id='TotalChart'></canvas>
               </div>
-              <div class="modal-body" >
-                  <p class="h6" style="color:black">
-                    This map shows 24 hours of citibike trips. </br>
-                    You can control the layers by choosing from the menu located at the right.
-                  </p>
+              <div class="tab-pane active" id="vstotal" role="tabpanel">
+                <canvas id='StartEndTotal'></canvas>
               </div>
             </div>
-          </div>
         </div>
-
-
-  <div id='title'> <h1> This is how 24 hours of citibike trips look like </h1>
-    <!-- <div> <i class="fas fa-play-circle fa-4x" style= "color:#0000CD"></i> </div> -->
-    <button class='StartButton' tyle='display: inline-block'> <i class="fas fa-play-circle fa-4x" style= "color:#0000CD"></i></button>
-    <button class='StopButton' tyle='display: inline-block'> <i class="fas fa-stop-circle fa-4x" style= "color:#0000CD"></i></button>
-
-    <!-- <p style='display: inline-block'></p> <div style='display: inline-block' class='HourCount' id='time'> <b>12:00 am - 12:59 am</b></div> -->
+      </div>
+    </div>
   </div>
 
-  <div id='chart'>
-    <p> This will be a graph of the trips </p>
+  <!-- Left container w/ info -->
+  <div id='container'> <h1> This is how 24 hours of citibike trips look like </h1>
+      <div class='row justify-content-center'>
+        <div class="col-xs-6 col-md-4">
+          <button class='button' id='infoButton'  tyle='display: inline-block'> <i class="fas fa-info-circle fa-4x" style= 'color:#0000CD'></i></button>
+        </div>
+        <div class="col-md-4">
+          <button class='button' id='layerButton' tyle='display: inline-block'> <i class="fas fa-clone fa-4x" style= 'color:#0000CD'></i></button>
+        </div>
+        <div class="col-md-4">
+          <button class='button' id='graphButton' tyle='display: inline-block'> <i class="fas fa-chart-pie fa-4x" style= 'color:#0000CD'></i></button>
+        </div>
+      </div>
+        <div class='row justify-content-center'>
+          <div class="col-xs-6 col-md-4">
+            <button class='button' id='StartButton' tyle='display: inline-block'> <i class='fas fa-play fa-4x' style= 'color:#0000CD'></i></button>
+          </div>
+          <div class="col-md-4">
+            <button class='button' id='PauseButton' tyle='display: inline-block'> <i class='fas fa-pause fa-4x' style= 'color:#0000CD'></i></button>
+          </div>
+          <div class="col-md-4">
+            <button class='button' id='StopButton'  tyle='display: inline-block'> <i class='fas fa-stop fa-4x' style= 'color:#0000CD'></i></button> </br></br>
+          </div>
+      </div>
+
+  <!-- Interactive info section:  -->
+      <div class="row" >
+        <div class="col-xs-12 col-md-4">
+          <h2 style='color: #0000CD'>Hour:</h2>
+
+        </div>
+        <div class="col-md-8">
+          <h2 class="text-right" style='color: #0000CD' id='hour'>All day</h2>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <h2 style='color: #0000CD'># Trips:</h2>
+
+        </div>
+        <div class="col-md-8">
+          <h2 class="text-right" style='color: #0000CD' id='trips'>73,728</h2>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <h2 style='color: #0000CD'>Incoming:</h2>
+
+        </div>
+        <div class="col-md-8">
+          <h2 class="text-right" style='color: #32CD32' id='incomingtrips'>36,864</h2>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <h2 style='color: #0000CD'>Outgoing:</h2>
+
+        </div>
+        <div class="col-md-8">
+          <h2 class="text-right" style='color: #DC143C' id='outgoingtrips'>36,864</h2>
+
+        </div>
+      </div>
   </div>
 
-  <div id='legend'>
-    <p><b> At any given hour: </b></br>
-    <p> Total number of trips:
-    1 <i class="far fa-circle fa-xs" style= "color:#C2C1C2"></i>
-      <i class="far fa-circle fa-sm" style= "color:#C2C1C2"></i>
-      <i class="far fa-circle fa-lg" style= "color:#C2C1C2"></i>
-      <i class="far fa-circle fa-2x" style= "color:#C2C1C2"></i>
-      <i class="far fa-circle fa-3x" style= "color:#C2C1C2"></i> 30 + </br>
-    <i class="fas fa-circle fa-sm" style= "color:#32CD32"></i> More trips arriving to the station</br>
-    <i class="fas fa-circle fa-sm" style= "color:#DC143C"></i> More trips leaving the station</br>
-    <i class="fas fa-circle fa-sm" style= "color:#C2C1C2"></i> Same amount of trips arriving and leaving </br>
-    <p style='font-size: 80%'> Press Alt+Shift to draw a zoom box in an area of interest</p>
-    <p style='font-size: 80%'> Data for January 22, 2018</p>
+  <div class='row' id=legend>
+    </br>
+    <p> Total number of trips: </br>
+      1 <i class='fas fa-circle fa-xs' style= 'color:#C2C1C2'></i>
+        <i class='fas fa-circle fa-sm' style= 'color:#C2C1C2'></i>
+        <i class='fas fa-circle fa-lg' style= 'color:#C2C1C2'></i>
+        <i class='fas fa-circle fa-2x' style= 'color:#C2C1C2'></i>
+        <i class='fas fa-circle fa-3x' style= 'color:#C2C1C2'></i> 30 + </br></br>
+        <i class='fas fa-circle fa-xs' style= 'color:#0000CD'></i> Citibike stations</br>
+      <i class='fas fa-circle fa-lg' style= 'color:#32CD32'></i> More incoming trips</br>
+      <i class='fas fa-circle fa-lg' style= 'color:#DC143C'></i> More outgoing trips</br>
+      <i class='fas fa-circle fa-lg' style= 'color:#C2C1C2'></i> Same amount of trips arriving and leaving
+    </p>
   </div>
 
   <div id='my-map'>
   </div>
 
-
   <!-- LOAD bootstrap -->
-      <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+      <script src='https://code.jquery.com/jquery-3.1.1.slim.min.js' integrity='sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n' crossorigin='anonymous'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js' integrity='sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb' crossorigin='anonymous'></script>
+      <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js' integrity='sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn' crossorigin='anonymous'></script>
 </body>
 
 <!-- LOAD Fonts -->
-      <link href='https://fonts.googleapis.com/css?family=Supermercado+One' rel='stylesheet'>
+      <link href='https://fonts.googleapis.com/css?family=Walter+Turncoat' rel='stylesheet'>
       <link href='https://fonts.googleapis.com/css?family=Jura' rel='stylesheet'>
 <!-- LOAD leaflet script -->
       <script src='https://unpkg.com/leaflet@1.3.1/dist/leaflet.js'
@@ -92,6 +198,8 @@
       crossorigin=''></script>
 <!-- LOAD GoogleMutant -->
       <script src='https://unpkg.com/leaflet.gridlayer.googlemutant@latest/Leaflet.GoogleMutant.js'></script>
+<!-- LOAD chartjs -->
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js'></script>
 <!-- LOAD DATA  -->
       <script src='data/00.js'></script>
       <script src='data/01.js'></script>
@@ -119,10 +227,11 @@
       <script src='data/23.js'></script>
 
 <!-- LOAD JS script -->
-<script src='js/scripts.js'></script>
+<script src='js/graph.js'></script>
+<script src='js/map.js'></script>
+<script src='js/player.js'></script>
 
 </body>
 </html>
-
 
   <!--
