Clean code, add all stations variable, popups info

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <script src='data/21.js'></script>
       <script src='data/22.js'></script>
       <script src='data/23.js'></script>
-      <script src="data/NYpoints_var.js"></script>
+      <script src="data/All.js"></script>
 
 <!-- LOAD JS script -->
 <script src='js/graph.js'></script>
